[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-dir]
"" = "src"
[tool.setuptools.packages.find]
include = ["ftwpki*", "fitzzftw*"]
namespaces = true
where = ["src"]

[tool.setuptools_scm]
# Erläuterung:
# ^v               -> Muss mit 'v' beginnen
# (?P<version>...) -> Die Versionsnummer (0.0.1)
# (?P<suffix>...)  -> Optionaler Anhang wie -test, a1, .rc1
tag_regex = '^v(?P<version>[^\+|-]+)(?P<suffix>[-._][a-zA-Z0-9]+)?$'
write_to = "src/ftwpki/baselibs/_version.py"

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Text Processing :: Filters",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Operating System :: OS Independent",
]
dependencies = ["platformdirs", "cryptography"]
description = "Core libraries and shared utilities for the ftw-pki ecosystem"
dynamic = ["version"]
name = "ftw-pki-libs"
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-2.1-or-later"

[project.urls]
Homepage = "https://github.com/fitzzftw/ftw-pki-libs"
Documentation = "https://github.com/fitzzftw/ftw-pki-libs/blob/main/README.md"
Repository = "https://github.com/fitzzftw/ftw-pki-libs.git"
Issues = "https://github.com/fitzzftw/ftw-pki-libs/issues"
Changelog = "https://github.com/fitzzftw/ftw-pki-libs/blob/main/CHANGELOG.md"

[project.optional-dependencies]
doc = [
  "sphinx < 9.0.0",
  "myst-parser",
  "sphinx-argparse",
  "autoclasstoc",
  "sphinx-nefertiti",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-mdinclude",
  "sphinxcontrib-mermaid",
]

dev = ["ftw-pki-libs[test,doc,lint]", "esbonio==0.16.5"]
lint = ["ruff"]
test = ["pytest", "pytest-mock", "pytest-cov","ftw-devtools"]

[[project.authors]]
email = "FitzzTeXnikWelt@t-online.de"
name = "Fitzz TeXnik Welt"

[[project.maintainers]]
email = "FitzzTeXnikWelt@t-online.de"
name = "Fitzz TeXnik Welt"

[tool.distutils.egg_info]
egg_base = "."

[tool.ruff]
exclude = ["pyproject.toml"]
line-length = 100
src = ["src"]

[tool.ruff.lint]
# E/W = Pycodestyle (Standard-Fehler/Warnungen)
# F = Pyflakes (Logik-Fehler wie ungenutzte Imports)
# I = isort (Sortierung der Imports)
# B = flake8-bugbear (findet potenzielle Design-Fehler)
ignore = ["W293", "W291", "B904"]
select = ["E", "W", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["ftwpki"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
# Pytest-Optionen für die Testausführung
addopts = [
  "--doctest-glob=get_started_*.rst",
  "--cov-report=term",
  "--cov-report=html",
]
minversion = "7.0"
testpaths = [
  "doc/source/devel", # Durchsucht Ihr Dokumentationsverzeichnis nach .rst-Dateien
  "tests", # Durchsucht das Unit-Test-Verzeichnis (für test_*.py)
]

[tool.coverage.run]
branch = true
omit = [
  "**/_version.py",
]

source = ["ftwpki.baselibs"]

[tool.coverage.report]
exclude_also = [
  "if *__name__ *=*[\"']__main__.*",
  "# for future use",
  "# not Windows testable",
  "# py 3.11 only",
  "# not py 3.11"
]
fail_under = 100
show_missing = true
#format = "text"
#
[tool.coverage.html]
# Das entspricht --cov-report=html:doc/build/coverage
directory = "doc/build/test_coverage/baselibs"

[tool.esbonio.sphinx]
buildCommand = ["sphinx-build", "-M", "dirhtml", "doc/source", "doc/build/esbonia"]
pythonCommand = ["${venv:../.venv311/}"]
